--- a/Code/main/main.ipynb
+++ b/Code/main/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4236abc6",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "b0032cd5",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "ce114a17",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "ea3f2429",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "6c356c69",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "457cd08d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "35638432",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "37c44460",
    "metadata": {},
    "outputs": [
@@ -130,8 +130,7 @@
          "type": "string"
         }
        ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "92cca439-523e-4b8e-b8f8-c942d3c7c275",
+       "ref": "f8a7b3d8-121b-406b-8661-633bf692bfbc",
        "rows": [
         [
          "0",
@@ -151,7 +150,7 @@
          "2",
          "doc:1",
          "fragment:1",
-         "161",
+         "192",
          "B_VERN"
         ],
         [
@@ -193,7 +192,7 @@
          "8",
          "doc:1",
          "fragment:1",
-         "2020",
+         "2019",
          "I_VERN"
         ],
         [
@@ -410,7 +409,7 @@
          "39",
          "doc:1",
          "fragment:1",
-         "terdakwa",
+         "Terdakwa",
          "O"
         ],
         [
@@ -424,69 +423,69 @@
          "41",
          "doc:1",
          "fragment:1",
-         "terdakwa",
+         "Nama",
          "O"
         ],
         [
          "42",
          "doc:1",
          "fragment:1",
-         "1",
+         "lengkap",
          "O"
         ],
         [
          "43",
          "doc:1",
          "fragment:1",
-         ".",
+         ":",
          "O"
         ],
         [
          "44",
          "doc:1",
          "fragment:1",
-         "Nama",
-         "O"
+         "H",
+         "B_DEFN"
         ],
         [
          "45",
          "doc:1",
          "fragment:1",
-         "lengkap",
-         "O"
+         ".",
+         "I_DEFN"
         ],
         [
          "46",
          "doc:1",
          "fragment:1",
-         ":",
-         "B_DEFN"
+         "Abd",
+         "I_DEFN"
         ],
         [
          "47",
          "doc:1",
          "fragment:1",
-         "Samuri",
+         "Aziz",
          "I_DEFN"
         ],
         [
          "48",
          "doc:1",
          "fragment:1",
-         "Alias",
+         "Al",
          "I_DEFN"
         ],
         [
          "49",
          "doc:1",
          "fragment:1",
-         "Mori",
+         ".",
          "I_DEFN"
         ]
        ],
        "shape": {
         "columns": 4,
-        "rows": 2537889
+        "rows": 1707808
        }
       },
       "text/html": [
@@ -533,7 +532,7 @@
        "      <th>2</th>\n",
        "      <td>doc:1</td>\n",
        "      <td>fragment:1</td>\n",
-       "      <td>161</td>\n",
+       "      <td>192</td>\n",
        "      <td>B_VERN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -558,63 +557,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2537884</th>\n",
-       "      <td>doc:345</td>\n",
-       "      <td>fragment:50030</td>\n",
+       "      <th>1707803</th>\n",
+       "      <td>doc:235</td>\n",
+       "      <td>fragment:33651</td>\n",
        "      <td>,</td>\n",
        "      <td>O</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2537885</th>\n",
-       "      <td>doc:345</td>\n",
-       "      <td>fragment:50030</td>\n",
+       "      <th>1707804</th>\n",
+       "      <td>doc:235</td>\n",
+       "      <td>fragment:33651</td>\n",
        "      <td>S</td>\n",
        "      <td>O</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2537886</th>\n",
-       "      <td>doc:345</td>\n",
-       "      <td>fragment:50030</td>\n",
+       "      <th>1707805</th>\n",
+       "      <td>doc:235</td>\n",
+       "      <td>fragment:33651</td>\n",
        "      <td>.</td>\n",
        "      <td>O</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2537887</th>\n",
-       "      <td>doc:345</td>\n",
-       "      <td>fragment:50030</td>\n",
+       "      <th>1707806</th>\n",
+       "      <td>doc:235</td>\n",
+       "      <td>fragment:33651</td>\n",
        "      <td>H</td>\n",
        "      <td>O</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2537888</th>\n",
-       "      <td>doc:345</td>\n",
-       "      <td>fragment:50030</td>\n",
+       "      <th>1707807</th>\n",
+       "      <td>doc:235</td>\n",
+       "      <td>fragment:33651</td>\n",
        "      <td>.</td>\n",
        "      <td>O</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2537889 rows × 4 columns</p>\n",
+       "<p>1707808 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "             doc        fragment    token     tag\n",
        "0          doc:1      fragment:1  PUTUSAN       O\n",
        "1          doc:1      fragment:1    Nomor       O\n",
-       "2          doc:1      fragment:1      161  B_VERN\n",
+       "2          doc:1      fragment:1      192  B_VERN\n",
        "3          doc:1      fragment:1        /  I_VERN\n",
        "4          doc:1      fragment:1      Pid  I_VERN\n",
        "...          ...             ...      ...     ...\n",
-       "2537884  doc:345  fragment:50030        ,       O\n",
-       "2537885  doc:345  fragment:50030        S       O\n",
-       "2537886  doc:345  fragment:50030        .       O\n",
-       "2537887  doc:345  fragment:50030        H       O\n",
-       "2537888  doc:345  fragment:50030        .       O\n",
+       "1707803  doc:235  fragment:33651        ,       O\n",
+       "1707804  doc:235  fragment:33651        S       O\n",
+       "1707805  doc:235  fragment:33651        .       O\n",
+       "1707806  doc:235  fragment:33651        H       O\n",
+       "1707807  doc:235  fragment:33651        .       O\n",
        "\n",
-       "[2537889 rows x 4 columns]"
+       "[1707808 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "9baf603a",
    "metadata": {},
    "outputs": [
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "ab5694cf",
    "metadata": {},
    "outputs": [
@@ -653,7 +652,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2537889 entries, 0 to 2537888\n",
+      "RangeIndex: 1707808 entries, 0 to 1707807\n",
       "Data columns (total 4 columns):\n",
       " #   Column    Dtype \n",
       "---  ------    ----- \n",
@@ -662,7 +661,7 @@
       " 2   token     object\n",
       " 3   tag       object\n",
       "dtypes: object(4)\n",
-      "memory usage: 77.5+ MB\n"
+      "memory usage: 52.1+ MB\n"
      ]
     }
    ],
@@ -672,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "061aab3b",
    "metadata": {},
    "outputs": [
@@ -706,8 +705,7 @@
          "type": "string"
         }
        ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "645942ed-889b-4e4b-ba32-5d54842789b3",
+       "ref": "c22d6fb8-76e9-4ea4-b09f-f07af41e616a",
        "rows": [
         [
          "0",
@@ -727,7 +725,7 @@
          "2",
          "doc:1",
          "fragment:1",
-         "161",
+         "192",
          "B_VERN"
         ],
         [
@@ -801,7 +799,7 @@
        "      <th>2</th>\n",
        "      <td>doc:1</td>\n",
        "      <td>fragment:1</td>\n",
-       "      <td>161</td>\n",
+       "      <td>192</td>\n",
        "      <td>B_VERN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -833,13 +831,13 @@
        "     doc    fragment    token     tag\n",
        "0  doc:1  fragment:1  PUTUSAN       O\n",
        "1  doc:1  fragment:1    Nomor       O\n",
-       "2  doc:1  fragment:1      161  B_VERN\n",
+       "2  doc:1  fragment:1      192  B_VERN\n",
        "3  doc:1  fragment:1        /  I_VERN\n",
        "4  doc:1  fragment:1      Pid  I_VERN\n",
        "5  doc:1  fragment:1        .  I_VERN"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
