--- a/Code/main/indoler.ipynb
+++ b/Code/main/indoler.ipynb
@@ -51,11 +51,7 @@
     "\n",
     "\n",
     "plt.style.use('default')\n",
-    "sns.set_palette(\"husl\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\"Library tambahan berhasil diimport!\")"
+    "sns.set_palette(\"husl\")\n"
    ]
   },
   {
@@ -1433,7 +1429,7 @@
     "    end_time = time.time()\n",
     "    training_duration = end_time - start_time\n",
     "    \n",
-    "    print(f\"\\n✓ Training completed successfully!\")\n",
+    "    print(f\"\\nTraining completed successfully!\")\n",
     "    print(f\"Training duration: {training_duration/60:.2f} minutes\")\n",
     "    print(f\"Final training loss: {train_result.training_loss:.4f}\")\n",
     "    \n",
@@ -1441,7 +1437,7 @@
     "    trainer.save_model()\n",
     "    tokenizer.save_pretrained(output_dir)\n",
     "    \n",
-    "    print(f\"\\n✓ Model and tokenizer saved to: {output_dir}\")\n",
+    "    print(f\"\\nModel and tokenizer saved to: {output_dir}\")\n",
     "    \n",
     "except Exception as e:\n",
     "    print(f\"\\nTraining failed with error: {e}\")\n",
@@ -1736,7 +1732,7 @@
     "        print(\"No entities detected\")\n",
     "        \n",
     "except Exception as e:\n",
-    "    print(f\"\\n❌ Inference failed with error: {e}\")\n",
+    "    print(f\"\\nInference failed with error: {e}\")\n",
     "    import traceback\n",
     "    traceback.print_exc()"
    ]
@@ -2099,277 +2095,6 @@
     "    f.write(preprocessing_code)\n",
     "\n",
     "print(f\"✓ Preprocessing utilities saved to preprocessing.py\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2354d8a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 4. Create model card and README\n",
-    "print(\"\\n4. Creating model documentation...\")\n",
-    "\n",
-    "# Model card\n",
-    "model_card = f'''\n",
-    "# Indonesian Legal NER Model\n",
-    "\n",
-    "## Model Description\n",
-    "\n",
-    "This is a Named Entity Recognition (NER) model fine-tuned on Indonesian legal documents using XLM-RoBERTa Large. The model identifies and classifies legal entities in Indonesian court decisions and legal texts.\n",
-    "\n",
-    "## Model Details\n",
-    "\n",
-    "- **Model Type**: Token Classification (NER)\n",
-    "- **Base Model**: xlm-roberta-large\n",
-    "- **Language**: Indonesian  \n",
-    "- **Domain**: Legal Documents\n",
-    "- **Framework**: Transformers (PyTorch)\n",
-    "- **Model Size**: Large (~1.2GB)\n",
-    "- **Training Date**: {datetime.now().strftime(\"%Y-%m-%d\")}\n",
-    "\n",
-    "## Entity Types\n",
-    "\n",
-    "The model recognizes the following entity types:\n",
-    "{chr(10).join([f\"- **{entity}**: Legal entity type\" for entity in label_mappings[\"entity_types\"]])}\n",
-    "\n",
-    "## Performance\n",
-    "\n",
-    "- **Validation F1-Score**: {eval_results.get('eval_f1', 0):.4f if 'eval_results' in locals() else \"N/A\"}\n",
-    "- **Test F1-Score**: {f1:.4f if 'f1' in locals() else \"N/A\"}\n",
-    "- **Precision**: {precision:.4f if 'precision' in locals() else \"N/A\"}\n",
-    "- **Recall**: {recall:.4f if 'recall' in locals() else \"N/A\"}\n",
-    "\n",
-    "## Usage\n",
-    "\n",
-    "```python\n",
-    "from transformers import AutoTokenizer, AutoModelForTokenClassification\n",
-    "import torch\n",
-    "\n",
-    "# Load model and tokenizer\n",
-    "model_name = \"./models/model_final/model_artifacts\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "model = AutoModelForTokenClassification.from_pretrained(model_name)\n",
-    "\n",
-    "# Example text\n",
-    "text = \"Majelis Hakim yang diketuai oleh Budi Santoso memutuskan bahwa terdakwa Ahmad Rahman terbukti bersalah.\"\n",
-    "\n",
-    "# Tokenize\n",
-    "inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, max_length=512)\n",
-    "\n",
-    "# Predict\n",
-    "with torch.no_grad():\n",
-    "    outputs = model(**inputs)\n",
-    "    predictions = torch.argmax(outputs.logits, dim=2)\n",
-    "\n",
-    "# Convert to labels\n",
-    "tokens = tokenizer.convert_ids_to_tokens(inputs[\"input_ids\"][0])\n",
-    "labels = [model.config.id2label[pred.item()] for pred in predictions[0]]\n",
-    "```\n",
-    "\n",
-    "## Training Data\n",
-    "\n",
-    "- **Training samples**: {len(train_torch_dataset):,}\n",
-    "- **Validation samples**: {len(val_torch_dataset):,}  \n",
-    "- **Test samples**: {len(test_torch_dataset):,}\n",
-    "- **Total entities**: {sum(true_entity_counts.values()) if 'true_entity_counts' in locals() else \"N/A\"}\n",
-    "\n",
-    "## Limitations\n",
-    "\n",
-    "- The model is specifically trained on Indonesian legal documents\n",
-    "- Performance may vary on different domains or document types\n",
-    "- Maximum input length is {metadata['max_length']} tokens\n",
-    "\n",
-    "## Citation\n",
-    "\n",
-    "If you use this model, please cite:\n",
-    "\n",
-    "```bibtex\n",
-    "@misc{{indonesian_legal_ner_2024,\n",
-    "  title={{Indonesian Legal Named Entity Recognition Model}},\n",
-    "  author={{Your Name}},\n",
-    "  year={{2024}},\n",
-    "  note={{Fine-tuned XLM-RoBERTa for Indonesian Legal NER}}\n",
-    "}}\n",
-    "```\n",
-    "'''\n",
-    "\n",
-    "with open(os.path.join(model_final_dir, \"README.md\"), 'w', encoding='utf-8') as f:\n",
-    "    f.write(model_card)\n",
-    "\n",
-    "# Requirements file for deployment\n",
-    "requirements = '''\n",
-    "torch>=1.9.0\n",
-    "transformers>=4.21.0\n",
-    "numpy>=1.21.0\n",
-    "PyPDF2>=3.0.0\n",
-    "streamlit>=1.25.0\n",
-    "gradio>=4.0.0\n",
-    "sentencepiece>=0.1.97\n",
-    "protobuf>=3.20.0\n",
-    "'''\n",
-    "\n",
-    "with open(os.path.join(model_final_dir, \"requirements.txt\"), 'w') as f:\n",
-    "    f.write(requirements)\n",
-    "\n",
-    "print(f\"✓ Model documentation created\")\n",
-    "print(f\"✓ Requirements file created\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "968eda9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # 5. Create example inference script\n",
-    "# print(\"\\n5. Creating example inference script...\")\n",
-    "\n",
-    "# inference_example = '''\n",
-    "# #!/usr/bin/env python3\n",
-    "# \"\"\"\n",
-    "# Example inference script for Indonesian Legal NER Model\n",
-    "\n",
-    "# Usage:\n",
-    "# python inference_example.py --text \"Your Indonesian legal text here\"\n",
-    "# python inference_example.py --pdf path/to/document.pdf\n",
-    "# \"\"\"\n",
-    "\n",
-    "# import argparse\n",
-    "# import json\n",
-    "# import sys\n",
-    "# from preprocessing import IndonesianLegalNERPreprocessor\n",
-    "\n",
-    "# def main():\n",
-    "#     parser = argparse.ArgumentParser(description='Indonesian Legal NER Inference')\n",
-    "#     parser.add_argument('--text', type=str, help='Input text for NER')\n",
-    "#     parser.add_argument('--pdf', type=str, help='Path to PDF file')\n",
-    "#     parser.add_argument('--model-path', type=str, default='./model_artifacts', \n",
-    "#                        help='Path to model directory')\n",
-    "#     parser.add_argument('--output', type=str, help='Output JSON file path')\n",
-    "    \n",
-    "#     args = parser.parse_args()\n",
-    "    \n",
-    "#     if not args.text and not args.pdf:\n",
-    "#         print(\"Error: Please provide either --text or --pdf\")\n",
-    "#         sys.exit(1)\n",
-    "    \n",
-    "#     # Initialize preprocessor\n",
-    "#     print(\"Loading model...\")\n",
-    "#     preprocessor = IndonesianLegalNERPreprocessor(args.model_path)\n",
-    "    \n",
-    "#     if not preprocessor.load_model_and_mappings():\n",
-    "#         print(\"Failed to load model\")\n",
-    "#         sys.exit(1)\n",
-    "    \n",
-    "#     # Get input text\n",
-    "#     if args.pdf:\n",
-    "#         print(f\"Extracting text from PDF: {args.pdf}\")\n",
-    "#         text = preprocessor.extract_text_from_pdf(args.pdf)\n",
-    "#         if not text:\n",
-    "#             print(\"Failed to extract text from PDF\")\n",
-    "#             sys.exit(1)\n",
-    "#     else:\n",
-    "#         text = args.text\n",
-    "    \n",
-    "#     print(f\"Input text length: {len(text)} characters\")\n",
-    "    \n",
-    "#     # Predict entities\n",
-    "#     print(\"Predicting entities...\")\n",
-    "#     entities = preprocessor.predict_entities(text)\n",
-    "    \n",
-    "#     # Display results\n",
-    "#     print(f\"\\\\nFound {len(entities)} entities:\")\n",
-    "#     print(\"=\" * 50)\n",
-    "    \n",
-    "#     for i, entity in enumerate(entities, 1):\n",
-    "#         print(f\"{i:2d}. {entity['label']:<15}: {entity['text']}\")\n",
-    "    \n",
-    "#     # Group by entity type\n",
-    "#     entity_groups = {}\n",
-    "#     for entity in entities:\n",
-    "#         label = entity['label']\n",
-    "#         if label not in entity_groups:\n",
-    "#             entity_groups[label] = []\n",
-    "#         entity_groups[label].append(entity['text'])\n",
-    "    \n",
-    "#     print(f\"\\\\nEntities by type:\")\n",
-    "#     print(\"=\" * 50)\n",
-    "#     for label, texts in entity_groups.items():\n",
-    "#         print(f\"{label} ({len(texts)}):\")\n",
-    "#         for text in texts[:5]:  # Show first 5\n",
-    "#             print(f\"  - {text}\")\n",
-    "#         if len(texts) > 5:\n",
-    "#             print(f\"  ... and {len(texts)-5} more\")\n",
-    "#         print()\n",
-    "    \n",
-    "#     # Save to file if requested\n",
-    "#     if args.output:\n",
-    "#         result = {\n",
-    "#             'input_text': text[:500] + '...' if len(text) > 500 else text,\n",
-    "#             'entities': entities,\n",
-    "#             'entity_counts': {label: len(texts) for label, texts in entity_groups.items()},\n",
-    "#             'total_entities': len(entities)\n",
-    "#         }\n",
-    "        \n",
-    "#         with open(args.output, 'w', encoding='utf-8') as f:\n",
-    "#             json.dump(result, f, indent=2, ensure_ascii=False)\n",
-    "        \n",
-    "#         print(f\"Results saved to: {args.output}\")\n",
-    "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     main()\n",
-    "# '''\n",
-    "\n",
-    "# with open(os.path.join(model_final_dir, \"inference_example.py\"), 'w', encoding='utf-8') as f:\n",
-    "#     f.write(inference_example)\n",
-    "\n",
-    "# print(f\"✓ Example inference script created\")\n",
-    "\n",
-    "# # Create simple test script\n",
-    "# test_script = '''\n",
-    "# #!/usr/bin/env python3\n",
-    "# \"\"\"\n",
-    "# Quick test script for the Indonesian Legal NER model\n",
-    "# \"\"\"\n",
-    "\n",
-    "# from preprocessing import IndonesianLegalNERPreprocessor\n",
-    "\n",
-    "# def test_model():\n",
-    "#     print(\"Testing Indonesian Legal NER Model\")\n",
-    "#     print(\"=\" * 40)\n",
-    "    \n",
-    "#     # Test text\n",
-    "#     test_text = \"Majelis Hakim yang diketuai oleh Budi Santoso telah memutuskan bahwa terdakwa Ahmad Rahman terbukti melakukan tindak pidana korupsi dengan putusan nomor 123/Pid.Sus-TPK/2023/PN.Jkt.Pst.\"\n",
-    "    \n",
-    "#     print(f\"Test text: {test_text}\")\n",
-    "    \n",
-    "#     # Initialize and load model\n",
-    "#     preprocessor = IndonesianLegalNERPreprocessor('./model_artifacts')\n",
-    "    \n",
-    "#     if preprocessor.load_model_and_mappings():\n",
-    "#         entities = preprocessor.predict_entities(test_text)\n",
-    "        \n",
-    "#         print(f\"\\\\nFound {len(entities)} entities:\")\n",
-    "#         for entity in entities:\n",
-    "#             print(f\"  {entity['label']}: {entity['text']}\")\n",
-    "#     else:\n",
-    "#         print(\"Failed to load model\")\n",
-    "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     test_model()\n",
-    "# '''\n",
-    "\n",
-    "# with open(os.path.join(model_final_dir, \"test_model.py\"), 'w', encoding='utf-8') as f:\n",
-    "#     f.write(test_script)\n",
-    "\n",
-    "# print(f\"✓ Test script created\")\n",
-    "# print(f\"\\nModel deployment preparation completed!\")\n",
-    "# print(f\"\\nFiles created in {model_final_dir}:\")\n",
-    "# for file in os.listdir(model_final_dir):\n",
-    "#     print(f\"  - {file}\")"
    ]
   }
  ],
